--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "eslint-boilerplate",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "lint": "eslint src --color"
-  },
+  "private": true,
+  "scripts": {},
+  "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^9.4.0",
     "eslint": "^5.10.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.3.0",
-    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "5.0.0-beta.6",
     "prettier": "^1.15.3",
-    "standard": "^12.0.1"
+    "prettier-eslint": "^8.8.2",
+    "prettier-stylelint": "^0.4.2",
+    "stylelint": "^9.9.0",
+    "stylelint-config-wordpress": "^13.1.0",
+    "stylelint-order": "^2.0.0"
   }
 }
